--- a/site/_generated/stories.njk
+++ b/site/_generated/stories.njk
@@ -9,7 +9,7 @@ title: Stories
 metadesc: Get the latest news, stories, resource articles, and case studies for Chrome OS.
 ---
 
-{% from 'featured-content.njk' import featuredContent %} {% from 'stories-section.njk' import storiesSection %}
+{% from 'featured-content.njk' import featuredContent %} {% from 'item-grid.njk' import itemGrid %} {% from 'stories-section.njk' import storiesSection %}
 
 <div class="wrapper--hidden-x">
   <!-- Featured Case Story -->
