--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -88,6 +88,7 @@
 @import 'components/card-routing';
 @import 'components/fifty-fifty';
 @import 'components/stories-section';
+@import 'components/stories-card';
 
 // Page Layouts
 @import 'layouts/tech-detail';
