--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -114,6 +114,14 @@
     }
   }
 
+  &--stories & {
+    &__content {
+      gap: 2.5rem 1.25rem;
+      margin-bottom: 1.5rem;
+      margin-top: 1.5rem;
+    }
+  }
+
   &--circled &__content {
     border-image-outset: 300px;
     border-image-slice: 0 fill;
