changed featured one image path and changed stories image to render hero image

--- a/site/_generated/stories.njk
+++ b/site/_generated/stories.njk
@@ -13,7 +13,7 @@ metadesc: Get the latest news, stories, resource articles, and case studies for 
 
 <div class="wrapper--hidden-x">
   <!-- Featured Case Story -->
-  {% if landingCollections.featured.second %}
+  {% if landingCollections.featured.first %}
   <div class="wrapper--full-bleed">{{ featuredContent(landingCollections.featured.first , l10n.stories.featured.modifiers) }}</div>
   {% endif %}
 
