fixed featured content wrapper

--- a/site/_components/featured-story.njk
+++ b/site/_components/featured-story.njk
@@ -23,7 +23,7 @@
   <img class="featured-story__image" src="{{image.image}}" alt="{{image.alt}}" />
   {% endfor %}
 
-  <div class="wrapper--padded wrapper__contained featured-story__wrapper">
+  <div class="wrapper--padded featured-story__wrapper">
     <article class="featured-story__container {{modifiers.custom}}">
       <section class="featured-story__copy-wrapper">
         <div class="featured-story__logo">
