clean up, removed stories section

--- a/site/_components/stories-card.njk
+++ b/site/_components/stories-card.njk
@@ -9,12 +9,21 @@
     @param {string} item.cta.url: Stories Card URL.
     @param {string} item.cta.text: Stories Card cta text.
  #}-->
-{% from 'icon.njk' import icon %} {% macro storiesCard(id, item) %}
-<a href="{{ item.cta.url }}" class="stories-card" aria-labelledby="sct{{id}}">
+{% from 'icon.njk' import icon %} {% macro storiesCard(item) %} {% set titleId %}{{ item.title | slug }}{% endset %}
+<a href="{{ item.cta.url }}" class="stories-card" aria-labelledby="{{titleId}}">
   <article class="stories-card__container">
+    {% if item.image %}
     <img class="stories-card__image" src="{{item.image}}" alt="{{item.alt}}" />
+    {% else %} {% if item.tag == "pwa" %}
+    <img class="stories-card__image" src="https://drive.google.com/uc?id=1hc1fjFKEM6H1LXl6tNM6149ywi2ZPoup" alt="Placeholder Image for {{ item.tag }}" />
+    {% endif %} {% if item.tag == "games" %}
+    <img class="stories-card__image" src="https://drive.google.com/uc?id=1RapjBVev9FwPxLuafGxRJMKGI11-rwVX" alt="Placeholder Image for {{ item.tag }}" />
+    {% endif %} {% if item.tag == "android" %}
+    <img class="stories-card__image" src="https://drive.google.com/uc?id=1jiLbp9rxM48SDDRJEiahNX5xAc9rPfvL" alt="Placeholder Image for {{ item.tag }}" />
+    {% endif %} {% endif %}
+
     <div class="stories-card__content">
-      <header id="sct{{id}}" class="stories-card__header">
+      <header id="{{titleId}}" class="stories-card__header">
         <h2 class="stories-card__title type--h4">{{item.title}}</h2>
       </header>
 
