--- a/site/_components/item-grid.njk
+++ b/site/_components/item-grid.njk
@@ -23,9 +23,9 @@
   {% if title %}
   <h3 class="item-grid__title {% if modifiers.heading %} type--{{modifiers.heading}} {% else %} type--h1 {% endif %}">{{title}}</h3>
   {% endif %} {% if modifiers.subtitle %}
-  <p class="type--large item-grid__subtitle">{{modifiers.subtitle}}</p>
+  <p class="item-grid__subtitle type--large">{{modifiers.subtitle}}</p>
   {% endif %}
-  <div class="item-grid__content">{% for item in items %} {% if modifiers.variant == 'icon' %} {{iconCard(item, defaultText)}} {% elif modifiers.variant == 'subnav' %} {% if item.icon and item.desc %} {{cardSubnav(item, locale)}} {% endif %} {% elif modifiers.variant == 'community' %} {{externalCommunity(item.logo, item.topic, item.cta)}} {% elif modifiers.variant == 'video' %} {{videoCard(item.video)}} {% elif modifiers.variant == 'routing'%} {{cardRouting(item.content, item.image, item.cta, locale)}} {% elif modifiers.variant == 'stories' %} {{storiesCard(loop.index, item)}} {% else %} {{ card(item) }} {% endif %} {% endfor %}</div>
+  <div class="item-grid__content">{% for item in items %} {% if modifiers.variant == 'icon' %} {{iconCard(item, defaultText)}} {% elif modifiers.variant == 'subnav' %} {% if item.icon and item.desc %} {{cardSubnav(item, locale)}} {% endif %} {% elif modifiers.variant == 'community' %} {{externalCommunity(item.logo, item.topic, item.cta)}} {% elif modifiers.variant == 'video' %} {{videoCard(item.video)}} {% elif modifiers.variant == 'routing'%} {{cardRouting(item.content, item.image, item.cta, locale)}} {% elif modifiers.variant == 'stories' %} {{storiesCard(item)}} {% else %} {{ card(item) }} {% endif %} {% endfor %}</div>
   {% if modifiers.cta %}
   <footer class="item-grid__footer">
     <a class="cta cta--medium" href="{% if locale is defined %}/{{locale}}/{% endif %}{{modifiers.cta.url}}">{{modifiers.cta.text}}</a>
