--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -85,6 +85,7 @@
 @import 'components/pwa-checklist';
 @import 'components/case-studies';
 @import 'components/card-study';
+@import 'components/featured-case-study';
 
 // Page Layouts
 @import 'layouts/tech-detail';
