--- a/site/sass/components/_card-study.scss
+++ b/site/sass/components/_card-study.scss
@@ -1,21 +1,11 @@
 @use 'sass:math';
 
 .card-study {
-  $break-2-col: 980px;
-  $break-feature-col: 690px;
-  $break-featured-stack: 0 689px;
-  $scale-max: 1600px;
-  $clamp-check: clamp(1px, 1vw, 2px);
-
+  align-content: flex-start;
   border-radius: 0.625rem;
-  display: grid;
-  grid-template-rows: min-content;
+  display: flex;
+  flex-wrap: wrap;
   overflow: hidden;
-  position: relative;
-
-  @include mq($break-2-col) {
-    grid-template: auto / 41.5% 1fr;
-  }
 
   &,
   &__tile {
@@ -23,33 +13,34 @@
   }
 
   &__media {
+    align-self: flex-start;
     aspect-ratio: 2 / 1;
-    height: 100%;
+    flex: 1 0 42%;
+    min-width: 15rem;
     object-fit: cover;
+
+    @include mq(560px) {
+      aspect-ratio: 5 / 3;
+    }
+
+    @include mq(1309px) {
+      height: 100%;
+    }
   }
 
   &__tile {
     align-items: flex-start;
+    align-items: center;
     display: flex;
+    flex: 1 1 58%;
     flex-direction: column;
     padding: 2rem 1.5rem;
+    text-align: center;
 
-    @include mq(0 419px) {
-      align-items: center;
-      text-align: center;
+    @include mq(386px) {
+      align-items: revert;
+      text-align: revert;
     }
-
-    @include mq($break-2-col) {
-      padding-bottom: 2rem;
-    }
-  }
-
-  &__tile-logo {
-    @include elevation(2);
-    border-radius: 0.625rem;
-    height: 3.75rem;
-    margin: 0 auto;
-    width: 3.75rem;
   }
 
   &__tile-eyebrow {
@@ -62,101 +53,5 @@
 
   &__tile-cta {
     margin-top: auto;
-  }
-
-  &--featured {
-    @include mq(560px) {
-      grid-column: 1 / 3;
-    }
-
-    @include mq($break-feature-col) {
-      grid-template-columns: 1fr minmax(28ch, 36.2%);
-    }
-
-    @include mq($break-2-col) {
-      grid-template-columns: 1fr 32.5% 8%;
-    }
-  }
-
-  &--featured & {
-    $spacing-s: 32px;
-
-    &__media {
-      aspect-ratio: 327 / 284;
-
-      @include mq($break-feature-col) {
-        aspect-ratio: 65 / 46;
-      }
-
-      @include mq($break-2-col) {
-        left: 0;
-        position: absolute;
-        top: 0;
-        width: 100%;
-      }
-    }
-
-    &__tile {
-      $margin-range: ($break-2-col $scale-max);
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      padding: 2rem;
-      position: relative;
-      text-align: center;
-
-      @supports (padding: $clamp-check) {
-        padding: generateScaling($margin-range, ($spacing-s 68px)) generateScaling((630px $scale-max), ($spacing-s 56px));
-      }
-
-      @include mq($break-featured-stack) {
-        padding-top: 0;
-      }
-
-      @include mq($break-2-col) {
-        border-radius: 0.625rem;
-        grid-column: 2;
-        height: auto;
-        justify-self: flex-end;
-        margin: 4rem 0;
-
-        @supports (margin-top: $clamp-check) {
-          margin: generateScaling($margin-range, ($spacing-s 98px)) 0;
-        }
-      }
-    }
-
-    &__tile-logo {
-      @include mq($break-featured-stack) {
-        transform: translateY(-50%);
-      }
-    }
-
-    &__tile-eyebrow {
-      margin-top: -1rem;
-
-      @include mq($break-feature-col) {
-        margin-top: 2rem;
-      }
-    }
-
-    &__tile-title {
-      margin: 1rem 0 0;
-    }
-
-    &__tile-cta {
-      align-self: center;
-      margin-top: 3rem;
-
-      @supports (margin-top: $clamp-check) {
-        margin-top: generateScaling((430px $scale-max), ($spacing-s 64px));
-      }
-    }
-  }
-
-  &--no-logo.card-study--featured {
-    .card-study__tile-eyebrow {
-      margin-top: 2rem;
-    }
   }
 }
