fix image format

--- a/site/_components/stories-card.njk
+++ b/site/_components/stories-card.njk
@@ -15,7 +15,7 @@
     {% if item.image %}
     <img class="stories-card__image" src="{{item.image}}" alt="{{item.alt}}" />
     {% else %}
-    <img class="stories-card__image" src="ix://landings/stories/placeholder-{{item.tag}}.png" alt="Placeholder Image for {{ item.tag }}" />
+    <img class="stories-card__image" src="ix://landings/stories/placeholder-{{item.tag}}.jpg" alt="Placeholder Image for {{ item.tag }}" />
     {% endif %}
 
     <div class="stories-card__content">
