--- a/site/sass/components/_logo.scss
+++ b/site/sass/components/_logo.scss
@@ -18,4 +18,46 @@
     margin-left: 0.75rem;
     text-decoration: none;
   }
+
+  &--cls-1 {
+    fill: none;
+  }
+
+  &--cls-2 {
+    clip-path: url('#logo--clip-path');
+  }
+
+  &--cls-3 {
+    fill: #db4437;
+  }
+
+  &--cls-4 {
+    fill: url('#logo--linear-gradient');
+  }
+
+  &--cls-5 {
+    fill: #3e2723;
+    fill-opacity: 0.15;
+  }
+
+  &--cls-6 {
+    fill: #0f9d58;
+  }
+
+  &--cls-7 {
+    fill: url('#logo--linear-gradient-2');
+  }
+
+  &--cls-10 {
+    fill: #ffcd40;
+  }
+
+  &--cls-11 {
+    fill: url('#logo--linear-gradient-3');
+  }
+
+  &--cls-22 {
+    fill: #ffffff;
+    fill-opacity: 0.2;
+  }
 }
