🆕(site) Add New Design to Stories Landing (#357)
* create storiesindex page

* add correct wrapper to news posts div

* finished styles for stories hero

* added styles for stories grid

* renamed to stories-section

* use item grid insteadand use clamp on image height

* Update site/_generated/stories.njk

Co-authored-by: Sam Richard <snugug@google.com>

* changed featured one image path and changed stories image to render hero image

* created featured story

* clean up hero sizing

* fixed featured content wrapper

* add subcribe body copy

* clean up, removed stories section

* Update site/_components/stories-card.njk

Co-authored-by: Sam Richard <snugug@google.com>

* Update site/sass/components/_stories-card.scss

Co-authored-by: Sam Richard <snugug@google.com>

* Update site/_components/featured-story.njk

Co-authored-by: Sam Richard <snugug@google.com>

* fix image format

Co-authored-by: Sam Richard <snugug@google.com>

--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -114,6 +114,27 @@
     }
   }
 
+  &--stories & {
+    &__title {
+      max-width: unset;
+    }
+
+    &__title,
+    &__subtitle {
+      text-align: left;
+    }
+
+    &__content {
+      gap: 2.5rem 1.25rem;
+      margin-bottom: 1.5rem;
+      margin-top: 1.5rem;
+
+      @include mq(1058px) {
+        grid-template-columns: repeat(auto-fit, minmax(pxRem(400px), 1fr));
+      }
+    }
+  }
+
   &--circled &__content {
     border-image-outset: 300px;
     border-image-slice: 0 fill;
