--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -87,6 +87,8 @@
 @import 'components/community-quotes';
 @import 'components/card-routing';
 @import 'components/fifty-fifty';
+@import 'components/featured-story';
+@import 'components/stories-card';
 
 // Page Layouts
 @import 'layouts/tech-detail';
