True fix for logo issue
Not just inline styling, but _inline styling_

--- a/site/_components/inline-svg.njk
+++ b/site/_components/inline-svg.njk
@@ -18,10 +18,10 @@
           <stop offset="0" stop-color="#fff" stop-opacity=".1" />
           <stop offset="1" stop-color="#fff" stop-opacity="0" />
         </radialGradient>
-        <clipPath id="logo--clip-path"><circle class="logo--cls-1" cx="43.06" cy="43.06" r="43.06" /></clipPath>
-        <clipPath id="logo--clip-path-6"><path class="logo--cls-1" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" /></clipPath>
-        <clipPath id="logo--clip-path-9"><path class="logo--cls-1" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" /></clipPath>
-        <clipPath id="logo--clip-path-12"><path class="logo--cls-1" d="M6.84 0v19.74l19.27 33.11 16.95-29.36h43.06V0H6.84z" /></clipPath>
+        <clipPath id="logo--clip-path"><circle style="fill: none" cx="43.06" cy="43.06" r="43.06" /></clipPath>
+        <clipPath id="logo--clip-path-6"><path style="fill: none" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" /></clipPath>
+        <clipPath id="logo--clip-path-9"><path style="fill: none" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" /></clipPath>
+        <clipPath id="logo--clip-path-12"><path style="fill: none" d="M6.84 0v19.74l19.27 33.11 16.95-29.36h43.06V0H6.84z" /></clipPath>
         <linearGradient id="logo--linear-gradient" x1="1806.81" y1="-2773.61" x2="1816.44" y2="-2767.98" gradientTransform="matrix(2.67 0 0 -2.67 -4807.72 -7363.49)" gradientUnits="userSpaceOnUse">
           <stop offset="0" stop-color="#a52714" stop-opacity=".6" />
           <stop offset=".66" stop-color="#a52714" stop-opacity="0" />
@@ -35,55 +35,55 @@
           <stop offset=".66" stop-color="#ea6100" stop-opacity="0" />
         </linearGradient>
       </defs>
-      <g class="logo--cls-2">
-        <path class="logo--cls-3" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
-        <path class="logo--cls-4" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
+      <g style="clip-path: url(#logo--clip-path)">
+        <path style="fill: #db4437" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
+        <path style="fill: url(#logo--linear-gradient)" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
       </g>
-      <g class="logo--cls-2"><path class="logo--cls-5" d="M26.58 52.68L7.09 19.25l-.29.49 19.35 33.18.43-.24z" /></g>
-      <g class="logo--cls-2">
-        <path class="logo--cls-6" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
-        <path class="logo--cls-7" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
+      <g style="clip-path: url(#logo--clip-path)"><path style="fill: #3e2723; fill-opacity: 0.15" d="M26.58 52.68L7.09 19.25l-.29.49 19.35 33.18.43-.24z" /></g>
+      <g style="clip-path: url(#logo--clip-path)">
+        <path style="fill: #0f9d58" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
+        <path style="fill: url(#logo--linear-gradient-2)" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
       </g>
       <path fill="#263238" fill-opacity=".15" d="M59.62 53.5l-.4-.23-18.79 32.85h.56l18.65-32.61-.02-.01z" />
-      <g class="logo--cls-2">
+      <g style="clip-path: url(#logo--clip-path)">
         <g logo--clip-path="url(#logo--clip-path-6)">
-          <path class="logo--cls-10" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
-          <path class="logo--cls-11" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
+          <path style="fill: #ffcd40" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
+          <path style="fill: url(#logo--linear-gradient-3)" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
         </g>
-        <g class="logo--cls-2">
-          <path class="logo--cls-10" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
-          <path class="logo--cls-11" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
+        <g style="clip-path: url(#logo--clip-path)">
+          <path style="fill: #ffcd40" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
+          <path style="fill: url(#logo--linear-gradient-3)" d="M43.06 23.49l16.96 29.36-19.03 33.27h45.13V23.49H43.06z" />
         </g>
-        <g class="logo--cls-2">
+        <g style="clip-path: url(#logo--clip-path)">
           <g logo--clip-path="url(#logo--clip-path-9)">
-            <path class="logo--cls-3" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
-            <path class="logo--cls-4" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
+            <path style="fill: #db4437" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
+            <path style="fill: url(#logo--linear-gradient)" d="M6.84 0v52.85h19.27l16.95-29.36h43.06V0H6.84z" />
           </g>
           <path fill="url(#logo--radial-gradient)" d="M43.06 23.49v10.25l38.37-10.25H43.06z" />
-          <g class="logo--cls-2">
+          <g style="clip-path: url(#logo--clip-path)">
             <g logo--clip-path="url(#logo--clip-path-12)">
-              <path class="logo--cls-6" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
-              <path class="logo--cls-7" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
+              <path style="fill: #0f9d58" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
+              <path style="fill: url(#logo--linear-gradient-2)" d="M0 86.12h40.99L60.02 67.1V52.85H26.11L0 8.06v78.06z" />
             </g>
             <path fill="url(#logo--radial-gradient-2)" d="M6.84 19.79L34.85 47.8l-8.74 5.05L6.84 19.79z" />
             <path fill="url(#logo--radial-gradient-3)" d="M41.02 86.07L51.28 47.8l8.74 5.05-19 33.22z" />
-            <g class="logo--cls-2">
+            <g style="clip-path: url(#logo--clip-path)">
               <circle cx="43.06" cy="43.06" r="19.57" fill="#f1f1f1" />
               <circle cx="43.06" cy="43.06" r="15.66" fill="#4285f4" />
             </g>
-            <g class="logo--cls-2">
+            <g style="clip-path: url(#logo--clip-path)">
               <path d="M43.06 23a19.57 19.57 0 00-19.57 19.57v.49a19.57 19.57 0 0119.57-19.57h43.06V23z" fill-opacity=".2" fill="#3e2723" />
               <path d="M60 52.85a19.53 19.53 0 01-33.86 0L0 8.06v.49l26.11 44.79a19.55 19.55 0 0033.87 0v-.49z" fill-opacity=".1" fill="#fff" />
               <path d="M43.55 23.49h-.24a19.56 19.56 0 010 39.12h.24a19.58 19.58 0 000-39.15z" style="isolation: isolate" opacity=".1" fill="#3e2723" />
-              <path class="logo--cls-22" d="M60.19 53.5a19.45 19.45 0 001.71-15.68 19.28 19.28 0 01-1.89 15L41 86.13h.57L60.2 53.52z" />
+              <path style="fill: #ffffff; fill-opacity: 0.2" d="M60.19 53.5a19.45 19.45 0 001.71-15.68 19.28 19.28 0 01-1.89 15L41 86.13h.57L60.2 53.52z" />
             </g>
-            <g class="logo--cls-2">
-              <path class="logo--cls-22" d="M43.06.49a43.06 43.06 0 0143.06 42.82v-.25a43.06 43.06 0 00-86.12 0v.25A43.07 43.07 0 0143.06.49z" />
-              <path class="logo--cls-5" d="M43.06 85.63a43.05 43.05 0 0043.06-42.81v.24a43.06 43.06 0 01-86.12 0v-.24a43.06 43.06 0 0043.06 42.81z" />
+            <g style="clip-path: url(#logo--clip-path)">
+              <path style="fill: #ffffff; fill-opacity: 0.2" d="M43.06.49a43.06 43.06 0 0143.06 42.82v-.25a43.06 43.06 0 00-86.12 0v.25A43.07 43.07 0 0143.06.49z" />
+              <path style="fill: #3e2723; fill-opacity: 0.15" d="M43.06 85.63a43.05 43.05 0 0043.06-42.81v.24a43.06 43.06 0 01-86.12 0v-.24a43.06 43.06 0 0043.06 42.81z" />
             </g>
             <circle cx="43.06" cy="43.06" r="43.06" fill="url(#logo--radial-gradient-4)" />
           </g>
-          <path class="logo--cls-1" d="M-3.91-3.91h93.95v93.95H-3.91z" />
+          <path style="fill: none" d="M-3.91-3.91h93.95v93.95H-3.91z" />
         </g>
       </g>
     </svg>
