--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -24,30 +24,25 @@ hideNewsletter: true
   <!-- Chrome OS Stats -->
   <div id="home__stats" class="wrapper wrapper--padded wrapper--padding">{{ stats(l10n.home.stats.items, l10n.home.stats.modifiers) }}</div>
 
-  <!-- Site Subnav -->
-  <div id="home__subnav" class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded wrapper__background wrapper__contained">{{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}</div>
-
-  <!-- Using Chrome OS -->
-  <section id="home__using" class="wrapper wrapper--full-top wrapper--full-bottom wrapper--rhythm wrapper--padded" aria-label="{{ l10n.home.onAndWith.desc }}">{% for item in l10n.home.onAndWith.cards %} {{ imageCard(item.images, item.content, item.cta, item.modifiers) }} {% endfor %}</section>
+  <!-- M100 Banner -->
+  <div id="home__banner">{{ bannerInterstitial(l10n.home.m100.content, l10n.home.m100.image, l10n.home.m100.cta, locale) }}</div>
 
   <!-- Recent Articles -->
   {% if landingCollections.posts.length > 0 %}
   <div id="home__articles" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.posts.title, landingCollections.homePosts, l10n.home.posts.modifiers, l10n.locale.code) }}</div>
   {% endif %}
 
-  <!-- Featured Case Story -->
-  {% if landingCollections.featured %}
-  <div id="home__featured" class="wrapper wrapper__yellow-circle wrapper--padded wrapper--bumper-top wrapper--full-bottom">{{ featuredContent(landingCollections.featured.first , l10n.home.featured.modifiers) }}</div>
-  {% endif %}
-
-  <!-- M100 Banner -->
-  <div id="home__banner">{{ bannerInterstitial(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta, l10n.home.chromebook.modifiers) }}</div>
-
   <!-- Developers -->
   <div id="home__developers" class="wrapper wrapper--padding wrapper--padded">{{ communityQuotes(l10n.home.developers.content, l10n.home.developers.quotes) }}</div>
 
+  <!-- Chromebooks -->
+  <div id="home__chromebooks" class="wrapper wrapper--background wrapper--no-bottom wrapper--padded">{{ heroCta(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta) }}</div>
+
   <!-- Community -->
   <div id="home__community" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
+
+  <!-- Site Subnav -->
+  <div id="home__subnav" class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded wrapper__background wrapper__contained">{{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}</div>
 
   <!-- Subscribe -->
   <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">{{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}</div>
