--- a/site/sass/components/_banner-interstitial.scss
+++ b/site/sass/components/_banner-interstitial.scss
@@ -2,58 +2,63 @@
 
 .banner-interstitial {
   $self: &;
-  $break-2-col: 603px;
+  $break-2-col: 720px;
   $scale-max: 1600px;
   $scale-range: ($break-2-col $scale-max);
   $clamp-check: clamp(1px, 1vw, 2px);
-  $begin-color-stop: var(--primary-blue), var(--primary-blue) math.percentage(math.div(211, 696)), var(--secondary-blue) math.percentage(math.div(211, 696));
   $gradient-angle-l: 105deg;
 
-  @include mq(0 $break-2-col - 1px) {
-    // Use a very small gradient for antialiasing.
-    background-image: radial-gradient(circle at 115% 80%, var(--primary-yellow), var(--primary-yellow) 27.5%, transparent 27.6%, transparent), radial-gradient(circle at 54% 76%, var(--primary-red), var(--primary-red) 27.5%, transparent 27.6%, transparent), linear-gradient(65deg, var(--secondary-blue), var(--secondary-blue) 115px, var(--primary-blue) 115px, var(--primary-blue));
-    overflow: hidden;
+  // Use a very small gradient on radials for antialiasing.
+  background-image:
+    // yellow circle
+    radial-gradient(circle at generateScaling((300px $break-2-col), (422px 660px)) generateScaling((300px $break-2-col), (480px 640px)), var(--primary-yellow), var(--primary-yellow) 30%, transparent 30.05%, transparent),
+    // red circle
+    radial-gradient(circle at generateScaling((300px $break-2-col), (135px 220px)) generateScaling((300px $break-2-col), (440px 700px)), var(--primary-red), var(--primary-red) 22.5%, transparent 22.55%, transparent),
+    // color stop
+    linear-gradient(65deg, var(--primary-blue), var(--primary-blue) generateScaling((375px 623px), (115px 130px)), var(--secondary-blue) generateScaling((375px 623px), (115px 130px)), var(--secondary-blue));
+  overflow: hidden;
 
-    // Add scaling to background '100' if supported.
-    @supports (width: $clamp-check) {
-      background-image: radial-gradient(circle at generateScaling((300px $break-2-col), (400px 660px)) generateScaling((300px $break-2-col), (480px 640px)), var(--primary-yellow), var(--primary-yellow) 30%, transparent 30.05%, transparent), radial-gradient(circle at generateScaling((300px $break-2-col), (168px 244px)) generateScaling((300px $break-2-col), (440px 700px)), var(--primary-red), var(--primary-red) 22.5%, transparent 22.55%, transparent), linear-gradient(65deg, var(--secondary-blue), var(--secondary-blue) 115px, var(--primary-blue) 115px, var(--primary-blue));
-    }
+  @include mq($break-2-col) {
+    background-image: none;
+    overflow: revert;
   }
 
   &__inner {
+    $color-stop-scaling: generateScaling($scale-range, (350px 525px));
+    $color-stop-start: var(--secondary-blue), var(--secondary-blue) $color-stop-scaling, var(--primary-blue) $color-stop-scaling;
+    $color-stop-end: calc($color-stop-scaling + generateScaling($scale-range, (105px 210px)));
+    $circle-size: generateScaling($scale-range, (109px 272px));
     display: grid;
     position: relative;
 
     // The background '100' moves to the inner once the banner is no longer full bleed.
     @include mq($break-2-col) {
-      background-image: radial-gradient(circle at 110% 40%, var(--primary-yellow), var(--primary-yellow) 22%, transparent 22.05%, transparent), radial-gradient(circle at 68% 85%, var(--primary-red), var(--primary-red) 26%, transparent 26.05%, transparent), linear-gradient($gradient-angle-l, $begin-color-stop, var(--secondary-blue) calc(math.percentage(math.div(211, 696)) + min(20%, 234px)), var(--primary-blue) calc(math.percentage(math.div(211, 696)) + min(20%, 234px)), var(--primary-blue));
+      background-image:
+        // yellow circle
+        radial-gradient(circle at generateScaling($scale-range, (680px 1450px)) 165px, var(--primary-yellow), var(--primary-yellow) $circle-size, transparent calc($circle-size + 1px), transparent),
+        // red circle
+        radial-gradient(circle at generateScaling($scale-range, (508px 949px)) generateScaling($scale-range, (300px 350px)), var(--primary-red), var(--primary-red) $circle-size, transparent calc($circle-size + 1px), transparent),
+        // color stop
+        linear-gradient($gradient-angle-l, $color-stop-start, var(--primary-blue) $color-stop-end, var(--secondary-blue) $color-stop-end, var(--secondary-blue));
       border-radius: 0.625rem;
-
-      @supports (width: $clamp-check) {
-        background-image: radial-gradient(circle at generateScaling(($break-2-col $scale-max), (550px 1525px)) generateScaling(($break-2-col $scale-max), (50px 140px)), var(--primary-yellow), var(--primary-yellow) 20%, transparent 20.05%, transparent), radial-gradient(circle at generateScaling(($break-2-col $scale-max), (400px 940px)) generateScaling(($break-2-col $scale-max), (170px 330px)), var(--primary-red), var(--primary-red) 30%, transparent 30.05%, transparent), linear-gradient($gradient-angle-l, $begin-color-stop, var(--secondary-blue) calc(math.percentage(math.div(211, 696)) + min(20%, 234px)), var(--primary-blue) calc(math.percentage(math.div(211, 696)) + min(20%, 234px)), var(--primary-blue));
-      }
     }
   }
 
   &__content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(pxRem(268px), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(pxRem(320px), 1fr));
     position: relative;
   }
 
   &__text {
-    $block-spacing-range: (24px 96px);
+    $spacing-range: (24px 96px);
 
     padding-top: 3rem;
     z-index: 1;
 
     @include mq($break-2-col) {
-      padding: 3.5rem 0 3.5rem 3rem;
+      padding: generateScaling($scale-range, $spacing-range) 0 generateScaling($scale-range, $spacing-range) generateScaling($scale-range, (nth($spacing-range, 1) 80px));
       place-self: center flex-start;
-
-      @supports (padding: $clamp-check) {
-        padding: generateScaling($scale-range, $block-spacing-range) 0 generateScaling($scale-range, $block-spacing-range) generateScaling($scale-range, (40px 124px));
-      }
     }
   }
 
@@ -65,9 +70,7 @@
 
   &__copy {
     margin-top: 1.25rem;
-    max-width: 42ch;
-    min-width: 24ch;
-    width: 38vw;
+    width: clamp(24ch, 24vw, 32ch);
 
     #{$self}--no-cta & {
       margin-bottom: 6rem;
@@ -76,27 +79,21 @@
 
   &__cta {
     display: inline-flex;
-    margin-top: 2.5rem;
+    margin-top: 1.75rem;
   }
 
   &__image-wrapper {
+    max-width: pxRem(746px);
     // Stretch image wrapper outside of the banner's wrapper.
     width: math.percentage(math.div(456px, 327px));
 
     @include mq($break-2-col) {
-      left: 50%;
+      max-width: none;
       position: absolute;
-      width: 50%;
-
-      @supports (width: $clamp-check) {
-        transform: translate(generateScaling($scale-range, (-24px -166px)), generateScaling($scale-range, (28px -56px)));
-        width: generateScaling($scale-range, (360px 840px));
-      }
-
-      @supports not (width: $clamp-check) {
-        top: 50%;
-        transform: translateY(-50%);
-      }
+      right: 0;
+      top: 0;
+      transform: translate(generateScaling($scale-range, (60px -24px)), generateScaling($scale-range, (-20px -120px)));
+      width: 63%;
     }
   }
 
