reposition chromebooks section, update spacing

--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -35,11 +35,11 @@ hideNewsletter: true
   <!-- Developers -->
   <div id="home__developers" class="wrapper wrapper--padding wrapper--padded">{{ communityQuotes(l10n.home.developers.content, l10n.home.developers.quotes) }}</div>
 
-  <!-- Chromebooks -->
-  <div id="home__chromebooks" class="wrapper wrapper--background wrapper--no-bottom wrapper--padded">{{ heroCta(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta) }}</div>
-
   <!-- Community -->
   <div id="home__community" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
+
+  <!-- Chromebooks -->
+  <div id="home__chromebooks" class="wrapper wrapper--no-top wrapper--padded">{{ heroCta(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta) }}</div>
 
   <!-- Site Subnav -->
   <div id="home__subnav" class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded wrapper__background wrapper__contained">{{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}</div>
