--- a/site/sass/globals/_colors.phosphor.scss
+++ b/site/sass/globals/_colors.phosphor.scss
@@ -1,11 +1,13 @@
-$google-colors: (
-  'blue-900': #174ea6,
-  'blue-850': #1c50b9,
-  'blue-800': #185abc,
-  'blue-700': #1967d2,
-  'blue-650': #3474e0,
-  'blue-600': #1a73e8,
-  'blue-500': #4285f4,
+$phosphor-green: '#33FF00';
+
+$phosphor-colors: (
+  'blue-900': $phosphor-green,
+  'blue-850': $phosphor-green,
+  'blue-800': $phosphor-green,
+  'blue-700': $phosphor-green,
+  'blue-650': $phosphor-green,
+  'blue-600': $phosphor-green,
+  'blue-500': $phosphor-green,
   'blue-400': #669df6,
   'blue-300': #8ab4f8,
   'blue-250': #76c9fa,
