--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -25,7 +25,7 @@ hideNewsletter: true
   <div id="home__stats" class="wrapper wrapper--padded wrapper--padding">{{ stats(l10n.home.stats.items, l10n.home.stats.modifiers) }}</div>
 
   <!-- M100 Banner -->
-  <div id="home__banner">{{ bannerInterstitial(l10n.home.m100.content, l10n.home.m100.image, l10n.home.m100.cta, locale) }}</div>
+  <div id="home__banner">{{ bannerInterstitial(l10n.home.m100.content, l10n.home.m100.image, l10n.home.m100.cta, locale.code) }}</div>
 
   <!-- Recent Articles -->
   {% if landingCollections.posts.length > 0 %}
