re-factor colors for poc

--- a/site/sass/globals/_colors.phosphor.scss
+++ b/site/sass/globals/_colors.phosphor.scss
@@ -1,13 +1,18 @@
 $phosphor-green: '#33FF00';
 
-$phosphor-colors: (
-  'blue-900': $phosphor-green,
+$google-colors: (
   'blue-850': $phosphor-green,
+  // #1c50b9,
   'blue-800': $phosphor-green,
+  // #185abc,
   'blue-700': $phosphor-green,
+  // #1967d2,
   'blue-650': $phosphor-green,
+  // #3474e0,
   'blue-600': $phosphor-green,
+  // #1a73e8,
   'blue-500': $phosphor-green,
+  // #4285f4,
   'blue-400': #669df6,
   'blue-300': #8ab4f8,
   'blue-250': #76c9fa,
