phosphor var name

--- a/site/sass/globals/_colors.phosphor.scss
+++ b/site/sass/globals/_colors.phosphor.scss
@@ -1,6 +1,6 @@
 $phosphor-green: '#33FF00';
 
-$google-colors: (
+$phosphor-colors: (
   'blue-850': $phosphor-green,
   // #1c50b9,
   'blue-800': $phosphor-green,
