phosphor learning/examples

--- a/site/sass/components/_colors.phosphor.scss
+++ b/site/sass/components/_colors.phosphor.scss
@@ -1,5 +1,5 @@
 .phosphor {
-  @each $c, $v in $google-colors {
+  @each $c, $v in $phosphor-colors {
     $name: '--#{$c}';
     #{$name}: #{$v};
   }
