--- a/site/_components/stories-card.njk
+++ b/site/_components/stories-card.njk
@@ -3,8 +3,9 @@
 
   Arguments:
     @param {object} item: Object to populate the stories card with
-    @param {string} item.image: Stories Card image.
-    @param {string} item.alt (optional): Stories Card alt text.
+    @param {object} item.media: An object containing the following attributes.
+    @param {string} item.media.image: Stories Card image.
+    @param {string} item.media.alt: Image description.
     @param {string} item.title: Stories Card title.  
     @param {string} item.cta.url: Stories Card URL.
     @param {string} item.cta.text: Stories Card cta text.
@@ -12,8 +13,8 @@
 {% from 'icon.njk' import icon %} {% macro storiesCard(item) %} {% set titleId %}{{ item.title | slug }}{% endset %}
 <a href="{{ item.cta.url }}" class="stories-card" aria-labelledby="{{titleId}}">
   <article class="stories-card__container">
-    {% if item.image %}
-    <img class="stories-card__image" src="{{item.image}}" alt="{{item.alt}}" />
+    {% if item.media.image is defined %}
+    <img class="stories-card__image" src="{{item.media.image}}" alt="{{item.media.alt}}" />
     {% else %}
     <img class="stories-card__image" src="ix://landings/stories/placeholder-{{item.tag}}.jpg" alt="Placeholder Image for {{ item.tag }}" />
     {% endif %}
