--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -83,6 +83,9 @@
 @import 'components/pagination';
 @import 'components/page-not-found';
 @import 'components/pwa-checklist';
+@import 'components/case-studies';
+@import 'components/card-study';
+@import 'components/featured-case-study';
 @import 'components/video-card';
 @import 'components/community-quotes';
 @import 'components/card-routing';
