💎(site) Interstitial Banner module (#325)
* interstitial banner layout

* intrinsic approach to banner, allow for reducing values in generateScaling

* transparent CTA

* add docs

* update block structure

* Add background 100 update docs

* address accessibility issues, remove homepage sections, restore original chromebook section, update docs, wait for ix:// asset

* update to ix:// sources

* reposition chromebooks section, update spacing

* update locale to locale.code, update cta.url

--- a/site/en/style-guide/typography/cta.njk
+++ b/site/en/style-guide/typography/cta.njk
@@ -43,6 +43,17 @@ intro: |-
 </section>
 
 <section class="style-guide__section">
+  <div class="style-guide__separate-items style-guide__separate-items--dark">
+    <button class="cta cta--transparent">Transparent CTA Link</button>
+    <button class="cta cta--transparent cta--right-icon">Transparent CTA Link {{icon('arrow-forward')}}</button>
+    <button class="cta cta--transparent cta--left-icon">{{icon('arrow-back')}} Transparent CTA Link</button>
+  </div>
+  <div class="type">
+    <p>Transparent CTAs are used on landing page banners that have a colored background, for instance in the interstitial banner. Transparent CTAs can be styled by including both the <code>cta</code> and <code>cta--transparent</code> classes.</p>
+  </div>
+</section>
+
+<section class="style-guide__section">
   <div class="style-guide__separate-items">
     <a href="/en" class="cta cta--link">Internal Link</a>
     <a href="https://google.com" class="cta cta--link">External Link</a>
