--- a/site/sass/globals/extends/_cta.scss
+++ b/site/sass/globals/extends/_cta.scss
@@ -91,6 +91,24 @@
     }
   }
 
+  &--transparent {
+    background-color: transparent;
+    border: 1px solid var(--white);
+    color: var(--white);
+
+    &:hover,
+    &:focus-visible,
+    &:active {
+      background-color: var(--white);
+      color: var(--secondary-blue);
+    }
+
+    &:focus-visible {
+      outline: var(--red-650) solid 2px;
+      outline-offset: 2px;
+    }
+  }
+
   &--low,
   &--link,
   &--back {
