--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -130,7 +130,7 @@
       margin-top: 1.5rem;
 
       @include mq(1058px) {
-        grid-template-columns: repeat(auto-fit, minmax(pxRem(400px), 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(pxRem(400px), 1fr));
       }
     }
   }
